Officially disallow identifiers in Lambda's (and SwEx, ...) return-`typeName`s